--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-atomic-styles",
-  "version": "0.0.1-rc.7",
+  "version": "0.0.1-rc.8",
   "description": "Atomic styles for React Native",
   "main": "src/index.ts",
   "react-native": "src/index.ts",
@@ -13,8 +13,9 @@
     "build": "NODE_ENV=production  node    scripts/bundle.js",
     "watch-css": "node-sass-chokidar ./src/styles.scss ./dist/styles.scss --watch",
     "build-css": "node-sass-chokidar ./src/styles.scss ./dist/styles.scss --build",
+    "css-module": "tcm dist -p styles.scss",
     "start:dev": "run-p watch-css watch",
-    "build:prod": "run-s build-css build",
+    "build:prod": "run-s build-css build css-module",
     "prepare": "run-s build:prod"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "react-native-postcss-transformer": "^1.2.4",
     "react-native-sass-transformer": "^1.4.0",
     "ts-nameof.macro": "^4.2.2",
+    "typed-css-modules": "^0.7.0",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
