--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-atomic-styles",
-  "version": "0.0.1-rc.9",
+  "version": "0.0.1",
   "description": "Atomic styles for React Native",
   "main": "src/index.ts",
   "react-native": "src/index.ts",
@@ -17,6 +17,14 @@
     "start:dev": "run-p watch-css watch",
     "build:prod": "run-s build-css build css-module",
     "prepare": "run-s build:prod"
+  },
+  "bin": {
+    "atomic-colors": "./scripts/generate-colors.js"
+  },
+  "dependencies": {
+    "commander": "^8.3.0",
+    "lodash": "^4.17.21",
+    "sass-maps-to-json": "^1.2.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.14.5",
@@ -50,7 +58,8 @@
     "react-native-sass-transformer": "^1.4.0",
     "ts-nameof.macro": "^4.2.2",
     "typed-css-modules": "^0.7.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "typescript-plugin-css-modules": "^3.4.0"
   },
   "peerDependencies": {
     "react": "^17.0.2",
