--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-atomic-styles",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Atomic styles for React Native",
   "main": "src/index.ts",
   "react-native": "src/index.ts",
@@ -11,12 +11,7 @@
   "scripts": {
     "watch": "NODE_ENV=development nodemon scripts/bundle.js --watch dist/styles.scss",
     "build": "NODE_ENV=production  node    scripts/bundle.js",
-    "watch-css": "node-sass-chokidar ./src/styles.scss ./dist/styles.scss --watch",
-    "build-css": "node-sass-chokidar ./src/styles.scss ./dist/styles.scss --build",
-    "css-module": "tcm dist -p styles.scss",
-    "start:dev": "run-p watch-css watch",
-    "build:prod": "run-s build-css build css-module",
-    "prepare": "run-s build:prod"
+    "css-module": "tcm dist -p styles.scss"
   },
   "bin": {
     "atomic-colors": "./scripts/generate-colors.js"
@@ -46,8 +41,6 @@
     "metro-core": "^0.66.2",
     "metro-react-native-babel-preset": "^0.66.2",
     "metro-react-native-babel-transformer": "^0.66.2",
-    "node-sass": "^6.0.1",
-    "node-sass-chokidar": "^1.5.0",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
@@ -56,6 +49,7 @@
     "react-native-css-module": "thanhtunguet/react-native-css-module",
     "react-native-postcss-transformer": "^1.2.4",
     "react-native-sass-transformer": "^1.4.0",
+    "sass": "^1.50.0",
     "ts-nameof.macro": "^4.2.2",
     "typed-css-modules": "^0.7.0",
     "typescript": "^4.3.5",
