--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "lodash": "^4.17.21",
     "sass-maps-to-json": "^1.2.0"
   },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@react-native-community/eslint-config": "^3.0.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.3",
     "@types/react": "^17.0.15",
-    "@types/react-native": "^0.64.12",
+    "@types/react-native": "^0.69.0",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "babel-plugin-macros": "^3.1.0",
@@ -54,9 +58,5 @@
     "typed-css-modules": "^0.7.0",
     "typescript": "^4.3.5",
     "typescript-plugin-css-modules": "^3.4.0"
-  },
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-native": "^0.64.2"
   }
 }
